diesel_compile_tests/tests/fail/derive_deprecated/deprecated_column_name.stderr
warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

error: unexpected end of input, expected `=`
  --> $DIR/deprecated_column_name.rs:24:7
   |
24 |     #[column_name]
   |       ^^^^^^^^^^^

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

error: expected `=`
  --> $DIR/deprecated_column_name.rs:31:18
   |
31 |     #[column_name()]
   |                  ^^

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

error: expected string literal
  --> $DIR/deprecated_column_name.rs:38:21
   |
38 |     #[column_name = 1]
   |                     ^

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` format instead

error: expected identifier
  --> $DIR/deprecated_column_name.rs:45:21
   |
45 |     #[column_name = "1"]
   |                     ^^^

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/deprecated_column_name.rs:13:21
   |
13 |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/deprecated_column_name.rs:13:21
   |
13 |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/deprecated_column_name.rs:19:34
   |
19 | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/deprecated_column_name.rs:19:34
   |
19 | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`
